--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="project">
             <h3><i class="fas fa-laptop-code"></i> Tugas CRUD Node.js</h3>
             <img src="img/crud-node.png" alt="Tampilan CRUD Node.js" class="project-img">
-            <p>Sebuah proyek tugas sekolah di mana saya membuat aplikasi CRUD menggunakan Node.js. Aplikasi ini memungkinkan pengguna menambah, mengedit, dan menghapus data.</p>
+            <p>Sebuah proyek tugas sekolah di mana saya membuat CRUD menggunakan Node.js. projek ini memungkinkan pengguna menambah, mengedit, dan menghapus data. Dibawah ini adalah rangkuman tentang projek tersebut.</p>
             <p><strong>Teknologi:</strong> Node.js</p>
             <p><a href="https://docs.google.com/document/d/1o6I2hrC_3GxbsMlygu79dalGk-5JptXTLzl2xv3FLa8/edit?usp=sharing" target="_blank">Lihat Demo</a></p>
         </div>
